# babbla

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  audit-repo.sh  docker-compose.yml  pyproject.toml
config/: channels.yaml
config/skills/: README.md
docs/: DEPLOY.md  ONBOARDING.md  PROPOSAL-design.md  PROPOSAL-pitch.md  RECOMMENDATIONS.md  REFLECTIONS.md  ROADMAP.md
docs/adr/: 0001-hybrid-build.md  0002-runtime-agnostic-via-mcp.md  0003-read-only-by-construction.md  0004-dual-path-deploy-release-mcp.md  0005-local-first-deployment.md  0006-stateful-config.md  0007-access-visibility-redaction.md  0008-release-anchored-digests.md  0009-repo-is-source-of-truth-for-why.md  0010-migration-is-ordinary-work.md  0011-always-on-container-hosting.md  README.md  (+7 more)
scripts/: clean_channel.py
tests/: test_access.py  test_action_cursor_store.py  test_action_scheduler.py  test_adr_action.py  test_adr_changes.py  test_agent_runner.py  test_app.py  test_artifacts.py  test_blocks.py  test_config.py  test_config_digest.py  test_digest_anchors.py  test_digest_cadence.py  test_digest_cli.py  test_digest_runner_poster.py  test_digest_scheduler.py  test_digest_shared.py  test_digest_state_store.py  test_doctor.py  test_doctor_cli.py  test_lobby.py  test_membership.py  test_orchestrator.py  test_personal.py  test_personal_digest.py  test_pulls.py  test_quiz.py  test_read_only_guard.py  test_runtime.py  test_scaffold.py  test_session_store.py  test_slack_adapter.py  test_smoke.py  test_stale_pr_action.py  test_subscriptions.py  test_topics_match.py
(+98 files in other folders)
