[project]
name = "babbla"
version = "0.1.0"
description = "Read-only Slack assistant answering cited questions about a GitHub project, built on the Claude Agent SDK over read-only MCP."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "claude-agent-sdk",
    "slack-bolt>=1.18",
    "aiohttp",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live test needing real Slack/GitHub/Claude tokens (deselect with -m 'not integration')",
]
